	- default names for diff file and xfrd state nicer.
	- fixed up kill nsd grep on ps.
	- fixed up race conditions in test script for kill nsd
	  wait for pid file creation by nsd, and grep -v grep in check.
	- in nsd signal-flags inherited from the parent are zeroed 
	  when a server_child starts. Also the server_child switches back
	  to NSD_RUN mode when a bad mode happens.

5 Apr 2006: Wouter
	- added lowerbound for retry timeout.
	- added extra assertions to xfrd-tcp.c, saying that the waiting line
	  for tcp connections must be empty if the counter is below max.
	- setup so that the first master tried is the first in acl list.
	- diff file skips OPT and TSIG RRs if they are put into the answer
	  section.
	- if IXFR contains an RR to delete that does not exist, nothing
	  happens.
	- update zone for NS, RRSIG also if multiple RRs in the rrset.
	- difffile: create zone struct also if domain exists already.
	- difffile: destroy temp region on error.
	- difffile: in delete_RR, create temp region outside of the routine,
	  so no alloc region, destroy region for every deleted RR.
	- difffile: for IXFR: do not delete final SOA RR.
	- difffile: unknown parts in file is an error.
	- difffile: EOF on last packet is ignored w/o giving an error.

4 Apr 2006: Wouter
	- Addes EACCES to the netio dispatch error bailout.
	- Removed EACCESS (probably due to log_msg), error on close
	  xfrd pipe is small, main process closes its end, and hopes for 
	  the best).
	- review: return on error condition in xfrd_tcp_open fixed.
	- review: expired when time >= expire_time, so it will not wait
	  for the retry after expire until it will detect the expiredness.
	- removed duplicate lines from xfrd_handle_zone_timeout.
	- review: copy of uint32_t using memcpy to avoid unaligned memory
	  accesses.
	- review: fd=-1 removed from set_refresh_now; only does timer.
	- on a tcp timeout it will retry immediately (instead of waiting