@@ -12,6 +12,7 @@
 	- in nsd signal-flags inherited from the parent are zeroed 
 	  when a server_child starts. Also the server_child switches back
 	  to NSD_RUN mode when a bad mode happens.
+	- check if ixfrs start from the version in memory.
 
 5 Apr 2006: Wouter
 	- added lowerbound for retry timeout.
